Fix population colors and water clipping

--- a/public/index.css
+++ b/public/index.css
@@ -226,6 +226,7 @@ t,
 #statesBody,
 #provincesBody,
 #relig,
+#population,
 #cults {
   mask: url(#land);
 }
